compile-direct/tests/failing/1-u32-is-not-rune/main.af
rune: @rune
u32: @u32

accept: (value: rune) {
    @exit(0)
}

forward: (value: u32) {
    accept(value)
}

main: () {
    forward(65)
}
